--- a/.github/workflows/cron-job.yml
+++ b/.github/workflows/cron-job.yml
@@ -43,7 +43,7 @@ jobs:
         git config user.name "GitHub Action"
         git config user.email "action@github.com"
         git add src/csv/
-        git diff --cached --exit-code || git commit -m "Actualización automática del archivo CSV"
+        git diff --cached --exit-code || git commit -m "Actualización automática de archivos CSV"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
